failure ulr add drink into order and basket show basket

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -58,5 +58,7 @@
         <location>/views/error/error403.jsp</location>
         <error-code>403</error-code>
     </error-page>-->
-
+    <!--<session-config>
+        <session-timeout>1</session-timeout>
+    </session-config>-->
 </web-app>
