--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,17 @@
             <version>2.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testifyproject.mock</groupId>
+            <artifactId>mockito</artifactId>
+            <version>0.9.5</version>
+        </dependency>
     </dependencies>
 
 
